<resources>
    <string name="app_name">My Restaurant</string>
    <string name="signIn">SIGN IN</string>

    <string name="FACEBOOK_APP_ID">1183977361784281</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">5ea017753925d51c30eb5a15a4397b42</string>
    <string name="title_activity_home">My Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_information">User Information</string>
    <string name="edtx_hint_name">Name</string>
    <string name="edtx_hint_address">Address</string>
    <string name="update">UPDATE</string>
    <string name="update_information">Update Information</string>
    <string name="menu_logout">Sign Out</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="nearby">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="update_info">Update Information</string>
    <string name="restaurant_name">Restaurant A</string>
    <string name="restaurant_address">El Quisco</string>
    <string name="Menu">By Your Mood Or Preference</string>
    <string name="category_name">Comida vegetariana</string>
    <string name="category">By Your Mood Or Especiality</string>
    <string name="name_food">Comida china</string>
    <string name="price_food">$180</string>
    <string name="money_sign">$</string>
    <string name="money_valor">200.00</string>
    <string name="txt_size">Size</string>
    <string name="txt_Addon">Add on</string>
    <string name="txt_Description">Description</string>
    <string name="view_cart">VIEW CART</string>
    <string name="sauce">sauce 01</string>
    <string name="search">search</string>
    <string name="favo">Favorite</string>
    <string name="menu_favo">Favorite</string>
    <string name="txtFood">chicken</string>
    <string name="txtprice">$100</string>
    <string name="txtNameRestaurant">Restaurant A</string>
    <string name="txt_user_phone">940540453</string>
    <string name="txt_date">Date</string>
    <string name="edtx_hint_date">Select Date</string>
    <string name="txt_Address">El quisco ,transversal 4</string>
    <string name="btn_new_Address">New Address</string>
    <string name="txt_Payment">Payment</string>
    <string name="rdi_cash_delivery">Cash on delivery</string>
    <string name="rdi_online_payment">Online Payment</string>
    <string name="btn_procced">Procced</string>
    <string name="place_older">Place_older</string>
    <string name="txt_price_total">Total Cost:</string>
    <string name="txt_price">0</string>
    <string name="btn_order">Order</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="txt_name_cart_food">Chicken</string>
    <string name="cartItem">1</string>
    <string name="txt_extra_price_food">Extra Price($) :  +180</string>
    <string name="txt_Address_">Address</string>
    <string name="your_order">Your Order</string>
    <string name="order">History Order</string>
    <string name="txt_order_number">Order #1234</string>
    <string name="txt_order_status">Processing</string>
    <string name="txt_order_phone">123456</string>
    <string name="txt_order_address">Address</string>
    <string name="txt_order_cod">COD</string>
    <string name="Order_on">Order on</string>
    <string name="txt_date_order">05/10/2019</string>
    <string name="txt_order_total_price">$180</string>
    <string name="txt_num_of_item">Num of item 2</string>
    <string name="title_activity_nearby_restaurant">Map</string>

</resources>