<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_favorite"
            android:src="@drawable/app_icon"
            android:scaleType="centerCrop"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="10"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_name_favorite"
                android:text="@string/txtFood"
                android:fontFamily="@font/magnifika"
                android:textColor="@color/button_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_price_favorite"
                android:textSize="14sp"
                android:textStyle="italic"
                android:text="@string/txtprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_name_restaurant_favorite"
                android:textSize="22sp"
                android:textStyle="italic"
                android:text="@string/txtNameRestaurant"
                android:fontFamily="@font/magnifika"
                android:textColor="@color/button_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>