<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    tools:context=".PlaceOlderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay"
                >

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:background="@color/button_color"
                    app:titleTextColor="@android:color/white"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">


                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.AppBarLayout>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:src="@drawable/ic_attach_money_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/txt_total_cash"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="8"
                            android:text="@string/money_valor"
                            android:textSize="18sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights" />


                    </LinearLayout>

                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:src="@drawable/ic_local_phone_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/txt_user_phone"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="8"
                            android:text="@string/txt_user_phone"
                            android:textSize="18sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights" />

                    </LinearLayout>

                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_date_range_gray_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:ignore="ContentDescription,NestedWeights" />

                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="2"
                            android:text="@string/txt_date"
                            android:textSize="18sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights" />

                        <EditText
                            android:id="@+id/edtx_date"
                            android:layout_weight="7"
                            android:hint="@string/edtx_hint_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:ignore="TextFields" />



                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:padding="8dp"
                android:text="@string/txt_Address"
                android:textSize="24sp"
                android:fontFamily="@font/magnifika"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights" />

            <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:id="@+id/txt_user_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="9"
                        android:padding="8dp"
                        android:text="@string/txt_Address"
                        android:textSize="18sp"
                        tools:ignore="NestedWeights" />

                    <CheckBox
                        android:id="@+id/chk_default_address"
                        android:layout_weight="1"
                        android:checked="true"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_new_Address"
                        android:text=""
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="7"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:id="@+id/btn_new_Address"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:background="@color/button_color"
                        android:text="@string/btn_new_Address"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

            <TextView
                android:padding="8dp"
                android:text="@string/txt_Payment"
                android:textSize="24sp"
                android:fontFamily="@font/magnifika"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights" />

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdi_cash_delivery"
                        android:checked="true"
                        android:text="@string/rdi_cash_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rdi_online_payment"
                        android:text="@string/rdi_online_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RadioGroup>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <Button
            android:id="@+id/btn_procced"
            android:layout_width="match_parent"
            android:background="@color/button_color"
            android:text="@string/btn_procced"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />


    </RelativeLayout>



</RelativeLayout>