<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_food_cart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_food_name_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:text="@string/txt_name_cart_food"
                android:textColor="@color/button_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="18">

                <TextView
                    android:id="@+id/txt_food_price_cart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/money_valor"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_clear_gray_24dp" />

                <ImageView
                    android:id="@+id/img_decrease"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_remove_primary_24dp" />

                <TextView
                    android:id="@+id/txt_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/quantity_background_texview"
                    android:gravity="center_horizontal"
                    android:text="@string/cartItem"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/img_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_add_primary_24dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_drag_handle_gray_24dp" />

                <TextView
                    android:id="@+id/txt_new_price_cart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/money_valor"
                    android:textSize="14sp"
                    android:textStyle="italic" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_extra_price_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:text="@string/txt_extra_price_food"
                     />


            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/img_delete_food"
            android:src="@drawable/ic_clear_primary_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.cardview.widget.CardView>