<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/button_color"
            app:titleTextColor="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_margin="8dp"
        android:layout_below="@+id/app_bar"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_above="@+id/layout_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/layout_price"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="8"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_price_total"
                    android:fontFamily="@font/magnifika"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_price"
                    android:text="@string/txt_price"
                    android:fontFamily="@font/magnifika"
                    android:textColor="@color/colorPrice"
                    android:textSize="30sp"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:gravity="end"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:background="@drawable/border_button"
            android:text="@string/btn_order"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            app:layout_alignSelf="flex_start"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>